--- a/style.css
+++ b/style.css
@@ -1,32 +1,34 @@
-html {
+ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 440px;
+    height: 100vh;
+    margin: 0;
 }
 
-body {
-    width: 160px
+.calculator {
+    text-align: center;
 }
 
-#myInput {
-    width: 156px;
-    margin: 0px;
-    padding: 3px 0px;
+#display {
+    width: 268px;
+    padding: 10px 0px;
+    font-size: 20px;
+    margin-bottom: 10px;
 }
 
-footer {
-    width: 160px;
-    display: flex;
-    flex-wrap: wrap;
+.buttons {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 10px;
 }
 
 button {
-    width: 40px;
-    height: 40px;
+    padding: 15px;
+    font-size: 18px;
+
 }
 
-.zero {
-    width: 80px;
+input {
+    width: 10px;
 }
-
